# starter

./: .gitignore  AGENTS.md  README.md
starter-nuxt/: .dev.vars.example  AGENTS.md  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  wrangler.toml
starter-nuxt/app/: app.config.ts
starter-nuxt/app/composables/: useSite.ts
starter-nuxt/app/layouts/: dashboard.vue  default.vue
starter-nuxt/app/pages/: index.vue  pricing.vue
starter-nuxt/docs/: decisions.md  playbook.md
starter-nuxt/server/api/: README.md  health.get.ts
starter-nuxt/server/utils/: README.md
starter-taro/: AGENTS.md  README.md  package.json  pnpm-lock.yaml  project.config.json  uno.config.ts
starter-taro/config/: index.ts
starter-taro/src/: app.css  app.tsx
starter-taro/src/hooks/: index.ts  queries.ts
starter-taro/src/services/: index.ts  request.ts
starter-taro/src/stores/: index.ts  useAuthStore.ts  useCounterStore.ts
starter-taro/src/utils/: dayjs.ts  index.ts  validation.ts
starter-tauri/: .gitignore  AGENTS.md  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
starter-tauri/public/assets/: README.md
starter-tauri/src-tauri/: Cargo.toml  tauri.conf.json
starter-tauri/src-tauri/src/: db.rs  lib.rs  main.rs  notes.rs
starter-tauri/src/app/: app-state.tsx  app.tsx  config.tsx  error-boundary.tsx  navigation.test.ts  navigation.tsx  providers.tsx  router.tsx
starter-tauri/src/assets/: README.md
starter-tauri/src/pages/notes/: api.ts  (+3 more)
starter-tauri/src/styles/: globals.css
(+35 files in other folders)
