[package]
name = "starter-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "starter_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tracing"] }
tauri-plugin-opener = "2"
libsql = "0.9"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
